@@ -1,3 +1,6 @@
+29 July 2005 Sylvain Pion
+- do_intersect(Iso_rectangle_2) : Remove useless assign().
+
 29 March 2005 Sylvain Pion
 - Fix typo in do_intersect(Line_2, Segment_2) spotted by Baruch.
 
